<?xml version="1.0" encoding="UTF-8"?>

<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-commons</artifactId>
  <version>1.1.14</version>

  <name>Vavi Commons API</name>
  <developers>
    <developer>
      <name>Naohide Sano</name>
    </developer>
  </developers>
  <url>https://github.com/umjammer/vavi-commons</url>
  <description>Swiss-Army Knife</description>
  <scm>
    <url>https://github.com/umjammer/vavi-commons</url>
  </scm>
  <issueManagement>
    <url>https://github.com/umjammer/vavi-commons/issues</url>
  </issueManagement>

  <distributionManagement>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/umjammer/vavi-commons</url>
    </repository>
  </distributionManagement>

  <profiles>
    <profile>
      <!-- mvn -P jdeps jdeps:jdkinternals -->
      <id>jdpes</id>
      <reports>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jdeps-plugin</artifactId>
            <version>3.1.2</version>
            <executions>
              <execution>
                <goals>
                  <goal>jdkinternals</goal> <!-- verify main classes -->
                  <goal>test-jdkinternals</goal> <!-- verify test classes -->
                </goals>
              </execution>
            </executions>
            <configuration>
            </configuration>
          </plugin>
        </plugins>
      </reports>
    </profile>

    <profile>
      <id>local (not on jitpack)</id>
      <activation>
        <property>
          <name>env.GITHUB_WORKFLOW</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-deploy-plugin</artifactId>
            <version>3.1.1</version>
            <executions>
              <execution>
                <id>default-deploy</id>
                <configuration>
                  <skip>true</skip> <!-- use exec-maven-plugin instead of this -->
                </configuration>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <!--
              because of maven deploy-file uploads source, jar also
              TODO maven-metadata.xml!/metadata/versioning/latest is not updated
              TODO how about https://stackoverflow.com/a/37552776/6102938
             -->
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <id>deploy-library</id>
                <phase>deploy</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <executable>mvn</executable>
              <arguments>
                <argument>deploy:deploy-file</argument>
                <argument>-DgroupId=${project.groupId}</argument>
                <argument>-DartifactId=vavi-instrumentation</argument>
                <argument>-Dversion=${project.version}</argument>
                <argument>-Dpackaging=jar</argument>
                <argument>-Dfile=${project.build.directory}/vavi-instrumentation-${project.version}.jar</argument>
                <argument>-DrepositoryId=github</argument>
                <argument>-Durl=https://maven.pkg.github.com/umjammer/vavi-commons</argument>
                <argument>-s</argument>
                <argument>${env.GITHUB_WORKSPACE}/settings.xml</argument>
              </arguments>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <additionalJOptions>
                <additionalJOption>-J-Duser.language=en_US</additionalJOption>  <!-- TODO ad-hoc -->
              </additionalJOptions>
              <additionalOptions>
                <additionalOption>-Xdoclint:none</additionalOption>
                <additionalOption>-Xdoclint:-missing</additionalOption>
              </additionalOptions>
              <locale>en_US</locale> <!-- TODO doesn't work why ??? -->
              <debug>true</debug>
              <verbose>false</verbose>
              <failOnWarnings>false</failOnWarnings>
              <failOnError>false</failOnError>
              <quiet>true</quiet>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <argLine>
            -javaagent:${project.build.directory}/vavi-instrumentation-${project.version}.jar
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
          </argLine>
          <trimStackTrace>false</trimStackTrace>
          <environmentVariables>
            <FOO_BAR_BUZ>hello!!</FOO_BAR_BUZ>
          </environmentVariables>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <jar jarfile="${project.build.directory}/vavi-instrumentation-${project.version}.jar"
                     manifest="src/instrumentation/resources/manifest.mf">
                  <fileset dir="${project.build.outputDirectory}">
                    <include name="vavix/lang/instrumentation/*Instrumentation.class" />
                    <include name="vavix/lang/instrumentation/*ClassFileTransformer*.class" />
                  </fileset>
                  <zipfileset src="${org.javassist:javassist:jar}"
                              excludes="META-INF/**"/>
                </jar>
              </target>
              <failOnError>true</failOnError>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>3.1.1</version>
        <executions>
          <execution>
            <id>install-library</id>
            <phase>install</phase>
            <goals>
              <goal>install-file</goal>
            </goals>
            <configuration>
              <groupId>${project.groupId}</groupId>
              <artifactId>vavi-instrumentation</artifactId>
              <version>${project.version}</version>
              <packaging>jar</packaging>
              <file>${project.build.directory}/vavi-instrumentation-${project.version}.jar</file>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.javassist</groupId>
      <artifactId>javassist</artifactId>
      <version>3.30.2-GA</version>
      <scope>provided</scope> <!-- don't touch to avoid not showing this as a dependency at another project -->
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>3.45.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>1.7.36</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
